# python_web_11

./: .gitignore  main.py  pyproject.toml  readmy.md
alembic/: env.py
seeds/: new_data.py
src/conf/: config.ini  config.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contact.py
